# tatneft_back

./: .gitignore  1.txt  backend.service  frontend.service  pyproject.toml  requirements.txt
tatneft_ai/: result.txt
tatneft_ai/audio2text/: voice_detection.py
tatneft_ai/utils_hack_tatneft/: classify_person.py  diarization.py  mathcing_persons.py  merge_subtitles.py  video_cut_mp3.py
tatneft_ai/utils_hack_tatneft/entity/: Judge.py  MFiLkO.py  Person.py
tatneft_ai/utils_hack_tatneft/image_works/: made_avatar.py  person_matching.py
tatneft_back/: log.py
tatneft_back/api/: err_handler.py  events.py
tatneft_back/api/v1/: router.py
tatneft_back/api/v1/routers/: action.py  auth.py  detected_human.py  event.py  reg.py  user.py
tatneft_back/api/v1/schemas/: action.py  auth_user.py  base.py  detected_human.py  event.py  reg_user.py  user.py
tatneft_back/core/: asgi.py  consts.py  create_app.py  enumerations.py  settings.py
tatneft_back/db/: db.py
tatneft_back/db/collections/: action.py  base.py  detected_human.py  event.py  mailcode.py  user.py
tatneft_back/models/: action.py  base.py  detected_human.py  event.py  mailcode.py  user.py
tatneft_back/services/: action.py  detected_human.py  event.py  mail.py  token.py  user.py
tatneft_back/utils/: enumeration.py  helpers.py  mail_utils.py  role_utils.py
