[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["Ivan122727 <ermolovivan2018@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">3.11,<3.12"
fastapi = "0.95.1"
motor = "3.1.2"
python-dotenv = "1.0.0"
pytz = "2023.3"
uvicorn = "0.21.1"
aiogram = "2.25.1"
pydantic = "1.10.7"
aiohttp = "3.8.4"
aiosignal = "1.3.1"
anyio = "3.6.2"
async-timeout = "4.0.2"
attrs = "23.1.0"
babel = "2.9.1"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
click = "8.1.3"
colorama = "0.4.6"
dnspython = "2.3.0"
emoji = "2.2.0"
frozenlist = "1.3.3"
gunicorn = "21.2.0"
h11 = "0.14.0"
idna = "3.4"
magic-filter = "1.0.9"
multidict = "6.0.4"
packaging = "23.1"
pymongo = "4.3.3"
python-multipart = "0.0.6"
requests = "2.29.0"
sniffio = "1.3.0"
starlette = "0.26.1"
typing-extensions = "4.5.0"
urllib3 = "1.26.15"
yarl = "1.9.2"
llvmlite = "^0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"